--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "website",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^5.16.6"
-  }
+    "name": "website",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/solid-js": "^5.1.3",
+        "@tailwindcss/vite": "^4.1.18",
+        "astro": "^5.16.6",
+        "solid-js": "^1.9.10",
+        "tailwindcss": "^4.1.18"
+    }
 }
