--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "astro": "^5.16.6",
         "solid-js": "^1.9.10",
         "tailwindcss": "^4.1.18"
+    },
+    "devDependencies": {
+        "wrangler": "^4.54.0"
     }
 }
