--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@astrojs/solid-js": "^5.1.3",
+        "@lucide/astro": "^0.562.0",
         "@tailwindcss/vite": "^4.1.18",
         "astro": "^5.16.6",
         "solid-js": "^1.9.10",
