--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "dev": "astro dev",
         "build": "astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:coverage": "vitest --coverage"
     },
     "dependencies": {
         "@astrojs/solid-js": "^5.1.3",
@@ -14,10 +17,17 @@
         "@tailwindcss/vite": "^4.1.18",
         "astro": "^5.16.6",
         "solid-js": "^1.9.10",
+        "tailwind-merge": "^3.4.0",
         "tailwind-variants": "^3.2.2",
         "tailwindcss": "^4.1.18"
     },
     "devDependencies": {
+        "@solidjs/testing-library": "^0.8.10",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/user-event": "^14.6.1",
+        "jsdom": "^27.4.0",
+        "vite-plugin-solid": "^2.11.10",
+        "vitest": "^4.0.16",
         "wrangler": "^4.54.0"
     }
 }
