--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
         "build": "astro build",
         "preview": "astro preview",
         "astro": "astro",
-        "test": "vitest",
+        "test": "vitest run",
         "test:watch": "vitest --watch",
-        "test:coverage": "vitest --coverage"
+        "test:coverage": "vitest --coverage",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "type-check": "tsc --noEmit",
+        "prepare": "husky"
     },
     "dependencies": {
         "@astrojs/solid-js": "^5.1.3",
@@ -25,9 +31,26 @@
         "@solidjs/testing-library": "^0.8.10",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/user-event": "^14.6.1",
+        "@typescript-eslint/eslint-plugin": "^8.51.0",
+        "@typescript-eslint/parser": "^8.51.0",
+        "@vitest/coverage-v8": "^4.0.16",
+        "eslint": "^9.39.2",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-astro": "^1.5.0",
+        "eslint-plugin-solid": "^0.14.5",
+        "husky": "^9.1.7",
         "jsdom": "^27.4.0",
+        "lint-staged": "^16.2.7",
+        "prettier": "^3.7.4",
+        "prettier-plugin-astro": "^0.14.1",
         "vite-plugin-solid": "^2.11.10",
         "vitest": "^4.0.16",
         "wrangler": "^4.54.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,astro}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
     }
 }
