--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
     "name": "ahmedragab",
     "compatibility_date": "2025-12-31",
-    "pages_build_output_dir": "./dist"
+    "pages_build_output_dir": "./dist",
 }
