--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "exclude": ["dist"],
     "compilerOptions": {
         "jsx": "preserve",
-        "jsxImportSource": "solid-js",
-    },
+        "jsxImportSource": "solid-js"
+    }
 }
