--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "lint-staged": "^16.2.7",
         "prettier": "^3.7.4",
         "prettier-plugin-astro": "^0.14.1",
+        "typescript": "^5.7.3",
         "vite-plugin-solid": "^2.11.10",
         "vitest": "^4.0.16",
         "wrangler": "^4.54.0"
