--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "format": "prettier --write .",
         "format:check": "prettier --check .",
         "type-check": "tsc --noEmit",
-        "prepare": "husky"
+        "prepare": "husky",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "@astrojs/solid-js": "^5.1.3",
@@ -26,23 +28,32 @@
         "tailwindcss": "^4.1.18"
     },
     "devDependencies": {
-        "tailwind-merge": "^3.4.0",
-        "tailwind-variants": "^3.2.2",
+        "@chromatic-com/storybook": "^4.1.3",
         "@solidjs/testing-library": "^0.8.10",
+        "@storybook/addon-a11y": "^10.1.11",
+        "@storybook/addon-docs": "^10.1.11",
+        "@storybook/addon-vitest": "^10.1.11",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/user-event": "^14.6.1",
         "@typescript-eslint/eslint-plugin": "^8.51.0",
         "@typescript-eslint/parser": "^8.51.0",
+        "@vitest/browser-playwright": "^4.0.16",
         "@vitest/coverage-v8": "^4.0.16",
         "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-astro": "^1.5.0",
         "eslint-plugin-solid": "^0.14.5",
+        "eslint-plugin-storybook": "^10.1.11",
         "husky": "^9.1.7",
         "jsdom": "^27.4.0",
         "lint-staged": "^16.2.7",
+        "playwright": "^1.57.0",
         "prettier": "^3.7.4",
         "prettier-plugin-astro": "^0.14.1",
+        "storybook": "^10.1.11",
+        "storybook-solidjs-vite": "^10.0.9",
+        "tailwind-merge": "^3.4.0",
+        "tailwind-variants": "^3.2.2",
         "typescript": "^5.7.3",
         "vite-plugin-solid": "^2.11.10",
         "vitest": "^4.0.16",
